Fix .article grid columns width.
Width was too narrow. Changed from 150px to 250px.

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -91,7 +91,7 @@
 .article {
   background-color: #bccbde;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(2, 1fr);
   gap: 15px;
 }
